sas-core/main/default/objects/Claim_Expense__c/Claim_Expense__c.object-meta.xml
<CustomObject>
    <description>A single expense claimed by a customer when submitting a claim.</description>
    <label>Claim Expense</label>
    <nameField>
        <displayFormat>CEN-{00000000}</displayFormat>
        <label>Claim Expense Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>