sas-core/main/default/objects/Claim_Expense__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The claim this expense is linked to.</description>
    <inlineHelpText>The claim this expense is linked to.</inlineHelpText>
    <label>Claim</label>
    <referenceTo>LIA_Claim__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Claim_Expenses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>