sas-core/main/default/objects/Claim_Expense__c/fields/Claim_Expense_Amount_In_SEK__c.field-meta.xml
<CustomField>
    <fullName>Claim_Expense_Amount_In_SEK__c</fullName>
    <description>Shows the claim expense amount converted to SEK. Useful when generating reports and comparing expenses.</description>
    <inlineHelpText>Shows the claim expense amount converted to SEK. Useful when generating reports and comparing expenses.</inlineHelpText>
    <label>Claim Expense Amount In SEK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>