sas-core/main/default/objects/Claim_Expense__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <length>30</length>
    <type>Text</type>
</CustomField>